# codegen-on-ec2

./: Makefile  README.md
codegen/: Dockerfile  pyproject.toml
codegen/codegen/: app.py  model_8bit.py  model_cpu.py  plain.py  server.py  settings.py
codegen/codegen/templates/: codegen.html
codegen/conf/: local_uwsgi.ini  prod_uwsgi.ini
codegen/tests/: test_codegen.py
infrastructure/: .gitignore  cdk.context.json  package-lock.json  package.json
infrastructure/lib/: infrastructure-stack.ts
infrastructure/lib/config/: parameters.ts
infrastructure/lib/ec2/: ec2.ts
