[tool.poetry]
name = "codegen"
version = "0.1.0"
description = ""
authors = ["Kate Yanchenko <kate.yanchenka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
Flask = "^2.2.2"
pandas = "^1.4.3"
jupyter = "^1.0.0"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
torch = "^1.12.1"
torchvision = "^0.13.1"
bitsandbytes = "^0.32.1"
accelerate = "^0.12.0"
sentencepiece = "^0.1.97"
transformers = {git = "https://github.com/huggingface/transformers.git", rev = "30992ef0d911bdeca425969d210771118a5cd1ac"}
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
